kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: external
      port: 9092
      targetPort: 9092
    - name: internal
      port: 9090
      targetPort: 9090
    - name: controller
      port: 9091
      targetPort: 9091
  type: ClusterIP
