products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
