users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
